--- a/app/components/Slider/Slide.css
+++ b/app/components/Slider/Slide.css
@@ -1,77 +1,101 @@
-.slider{
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+.continer_slider{
+    width:100vw;
+    height: 100%;
+    /* background-color: red; */
+    /* overflow: hidden; */
 }
-.slider h1{
-   z-index: 10000;
-    font-size: 18vh;
-    font-weight: 500;
-    text-align: center;
+.continer_slider .first_s{
+    z-index: 200;
+    position: relative;
+    /* color: white; */
+    /* background-color: red; */
+    left: 23rem;
+    top: 2rem;
+    font-size: 7rem;
 }
-.line_slider{
-    position: absolute;
-    top: 58vh;
-    left: 65vh;
-    width: 80vh;
+.continer_slider .second_s{
+    /* color: white;   */
+    z-index: 200;
+      position: relative;
+      /* background-color: red; */
+      left: 32rem;
+      top: 2rem;
+    font-size: 7rem;
+}
+.continer_slider .lineee{
+    width: 60vh;
     height: 3px;
     background-color: black;
-    
-}
-.slider h4{
-    font-size: 4vh;
-    text-align: center;
-    font-weight: 500;
-}
-.slider h1:nth-child(1){
     position: relative;
-    top: -20vh;
-    left: -20vh;
-    /* color: red; */
+    top: 2rem;
+    left: 28rem;
+
 }
-.slider h1:nth-child(3){
+.continer_slider h5{
     position: relative;
-    top: -20vh;
-    z-index: 100;
-    left: 15vh;
-    /* color: red; */
+    font-size: 2rem;
+    top: 3rem;
+    left: 29rem;
 }
-.slider h4:nth-child(5){
-    position: absolute;
-    top: 50vh;
-    left: 20vh;
-    padding-top: 2vh;
-    /* color: red; */
+.img0{
+    position: relative;
+    top: -12rem;
+    object-fit: cover;
+    left: 6rem;
 }
-.line1_grey{
-    position: absolute;
-    top: 8vh;
-    left: 68vh;
-    height: 50vh;
-    width: 2px;
-    background-color: rgb(126, 123, 123);
+.img1,.img3,.img5{
+    object-fit: cover;
+    position: relative;
+    top: -32rem;
+    left: 62rem;
 }
-.line2_grey{
-    position: absolute;
-    bottom: 8vh;
-    right: 68vh;
-    height: 50vh;
-    width: 2px;
-    background-color: rgb(126, 123, 123);
+.img0text,.img4text{
+    position: relative;
+    top:-12rem;
+    left: 7rem;
+    /* text-align: center; */
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 1.4rem;
 }
-.slider img:nth-child(7){
-    width: 45vh;
-    /* height: 60vh; */
-    position: absolute;
-    left: 4vh;
-    top: 25vh;
+.img1text,.img3text,.img5text{
+    position: relative;
+    top: -32rem;
+    left: 67rem;
+    /* text-align: center; */
+    /* width: 200px; */
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 1.4rem;
 }
-.slider img:nth-child(8){
-    width: 50vh;
-    position: absolute;
-    right: 5vh;
-    top: 15vh;
+.img2text{
+    position: relative;
+    top:-12rem;
+    left: 8.5rem;
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 1.4rem;
+}
+.img3,.img5{
+    top: -36rem;
+    left: 65rem;
+}
+.img3text{
+    top: -36rem;
+    left: 71rem;
+    font-weight: 900;
+}
+.img4text{
+    top:-12rem;
+    left: 13rem;
+}
+.img5{
+    top: -39rem;
+    left: 61rem;
+    height: 400px;
+}
+.img5text{
+    top: -39rem;
+    left: 65rem;
+    font-weight: 900;
 }
