--- a/app/components/Slider/Slider.css
+++ b/app/components/Slider/Slider.css
@@ -1,10 +1,14 @@
 .slide_slide{
-    height: calc(100vh-80px);
+    height: 60vh;
+    /* height: calc(100vh-80px); */
     width: 100vw;
+    overflow-x: hidden;
     position: relative;
 }
 .slide_container{
     width: 300vw;
+    overflow-y: hidden;
+    overflow-y: none;
     height: 100%;
     display: flex;
 }
@@ -30,4 +34,8 @@
 }
 .icon:hover{
     background-color: #777;
+}
+body{
+    width: 100vw;
+    overflow-x: hidden;
 }
