--- a/app/components/Categories/Categories.css
+++ b/app/components/Categories/Categories.css
@@ -10,8 +10,6 @@ html::-webkit-scrollbar-thumb{
 html::-webkit-scrollbar-track{
     background-color: white;
 }
-
-
 .categories{
     display: flex;
     height: 80vh;
@@ -49,6 +47,7 @@ html::-webkit-scrollbar-track{
     cursor: pointer;
     background-color: white;
     text-transform: uppercase;
+    font-size: 1rem;
     font-weight: 500;
 
 }
@@ -58,3 +57,6 @@ html::-webkit-scrollbar-track{
    object-fit: cover;
 }
 
+.gg_img:hover .btn_.btn .link{
+   background-color: red;
+}
