--- a/src/app/product/PrdtDtl.css
+++ b/src/app/product/PrdtDtl.css
@@ -1,7 +1,21 @@
+html::-webkit-scrollbar{
+    width: 0.3vw;
+    scroll-behavior: smooth;
+}
+html::-webkit-scrollbar-thumb{
+    background-color: #555;
+    height: 1vh;
+    border-radius: 9px;
+}
+html::-webkit-scrollbar-track{
+    background-color: white;
+}
 .product_detail{
+    /* margin-top: 50px; */
     padding: 20px 50px;
     display: flex;
     gap: 50px;
+    /* background-color: red; */
 }
 .product_detail .left_prdtDtl{
     flex: 1;
