--- a/src/app/login/login.css
+++ b/src/app/login/login.css
@@ -11,6 +11,7 @@
     padding: 30px 50px;
     background-color: #f1f1f1;
     display: flex;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     border-radius: 5px;
     align-items: center; 
     flex-direction: column;
