--- a/src/app/admin-view/addproduct/AddProduct.css
+++ b/src/app/admin-view/addproduct/AddProduct.css
@@ -32,6 +32,9 @@
 }
 .container_addProducts button{
     width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #111;
     color: #fff;
     padding: 15px;
