--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -1,5 +1,28 @@
-.lists{
+.lists {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
+    /* width: 50px; */
+}
+
+.ariticleList {
+    display: flex;
+    flex-direction: column;
+    margin: 30px;
+}
+
+.uWuButtonsSingle {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    gap: 5px;
+    justify-content: center;
+}
+
+.uWuButtonsSingle button {
+    padding: 10px;
+    font-size: 14px;
+    color: white;
+    background-color: #000;
+    cursor: pointer;
 }
