--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,13 +1,16 @@
 .card{
-    width: 280px;
+    width: 260px;
+    height: 320px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    margin-bottom: 50px;
+    gap: 5px;
+    /* margin-top: 50px; */
+    margin-bottom: 5px;
+    /* background-color: red; */
 }
 .card .images_card{
     width: 100%;
-    height: 400px;
+    height: 320px;
     overflow: hidden;
     position: relative;
 }
@@ -37,7 +40,7 @@
 }
 .card h2{
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 500;
 }
 .card .prices_cards{
     display: flex;
