--- a/src/app/login/login.css
+++ b/src/app/login/login.css
@@ -1,4 +1,4 @@
-.register{
+.register {
     height: 62vh;
     /* margin: 20px 0; */
     display: flex;
@@ -6,52 +6,61 @@
     justify-content: center;
     /* background-color: #f1f1f1; */
 }
-.register .register_container{
+
+.register .register_container {
     margin: 20px 0;
     padding: 30px 50px;
     background-color: #f1f1f1;
     display: flex;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     border-radius: 5px;
-    align-items: center; 
+    align-items: center;
     flex-direction: column;
     justify-content: center;
 }
-.register .register_container h1{
+
+.register .register_container h1 {
     font-weight: 500;
     font-size: 28px;
     margin-bottom: 10px;
 }
-.register .register_container .input_container{
+
+.register .register_container .input_container {
     display: flex;
     flex-direction: column;
     /* gap: 10px; */
     /* column-gap: 10px; */
 }
-.input_container label{
-    font-size: 20px; 
-    font-weight: 400; 
+
+.input_container label {
+    font-size: 20px;
+    font-weight: 400;
     margin-bottom: 5px;
     /* gap: 10px; */
 }
-.input_container input{
+
+.input_container input {
     width: 250px;
     height: 35px;
-margin-bottom: 5px;
-border: none;
-outline: none;
-padding: 10px 10px;
-/* background-color: #f1f1f1; */
-font-size: 15px;
-font-weight: 400;
+    margin-bottom: 5px;
+    border: none;
+    outline: none;
+    padding: 10px 10px;
+    /* background-color: #f1f1f1; */
+    font-size: 15px;
+    font-weight: 400;
 }
-.register_container .register_btn, .login_btn{
+
+.register_container .register_btn,
+.login_btn {
     display: flex;
     align-items: center;
-    justify-content: center;    
+    justify-content: center;
     flex-direction: column;
 }
-.register_container .register_btn button, .login_btn button{
+
+.register_container .register_btn button,
+.login_btn button {
     background-color: black;
     display: flex;
     align-content: center;
@@ -66,25 +75,35 @@ font-weight: 400;
     border: none;
     border-radius: 2px;
 }
-.register_container .haveAcc{
+
+.register_container .haveAcc {
     margin-top: 10px;
 }
-.link_register{
+
+.link_register {
     color: #111;
-    font-size: 18px; 
+    font-size: 18px;
     font-weight: 700;
 }
-.input_container p{
+
+.input_container p {
     color: red;
     margin-bottom: 10px;
     text-align: start;
     margin-left: 8px;
     padding-bottom: 10px;
 }
-.haveAcc p{
+
+.haveAcc p {
     color: #111;
 }
-.login_btn button:disabled{
+
+.login_btn button:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
+.lastButONe button:disabled {
     opacity: 0.5;
     cursor: not-allowed;
 }
