--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,4 +1,4 @@
-.card{
+.card {
     width: 260px;
     height: 320px;
     display: flex;
@@ -8,7 +8,8 @@
     margin-bottom: 5px;
     /* background-color: red; */
 }
-.card .images_card{
+
+.card .images_card {
     width: 100%;
     height: 320px;
     overflow: hidden;
@@ -16,21 +17,24 @@
 
 }
 
-.card .images_card img{
+.card .images_card img {
     width: 100%;
     height: 100%;
     /* object-fit: contain; */
-    object-fit:cover;
+    object-fit: cover;
     position: absolute;
     cursor: pointer;
 }
-.card .images_card .mainImage{ 
+
+.card .images_card .mainImage {
     z-index: 1;
 }
-.card .images_card:hover .secondImage{
-    z-index: 2; 
+
+.card .images_card:hover .secondImage {
+    z-index: 2;
 }
-.card .images_card span{
+
+.card .images_card span {
     position: absolute;
     top: 5px;
     left: 5px;
@@ -41,24 +45,31 @@
     font-weight: 500;
     font-style: 12px;
 }
-.card h2{
+
+.card h2 {
     font-size: 16px;
     font-weight: 500;
 }
-.card .prices_cards{
+
+.card .prices_cards {
     display: flex;
     gap: 20px;
 }
-.card .prices_cards h3{
+
+.card .prices_cards h3 {
     font-size: 18px;
     font-weight: 500;
 }
-.card .prices_cards h3:first-child{
+
+.card .prices_cards h3:first-child {
     color: gray;
     text-decoration: line-through;
 }
-.span_component{
+
+.span_component {
+    color: #fff;
     display: flex;
-    gap: 10px;
+    /* gap: 10px; */
+    justify-content: center;
     align-items: center;
 }
