--- a/src/app/checkout/checkout.css
+++ b/src/app/checkout/checkout.css
@@ -4,8 +4,7 @@
 }
 
 .secondCheckout {
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 2rem;
 }
 
 .thirdCheckout {
@@ -129,7 +128,12 @@
 }
 
 .border-rejhjhjhjhd-900 {
-    border-color: #7F1D1D;
+    border: 2px solid #7f1d1d;
+}
+
+.lastCheckoutBtton:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
 }
 
 .adresCheckout {
