--- a/src/app/orders/orders.css
+++ b/src/app/orders/orders.css
@@ -1,20 +1,3 @@
-.navbar_admin {
-    background-color: beige;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    padding: 20px;
-    /* font-size: 20px; */
-    font-weight: 600;
-
-}
-
-.navbar_admin h3 {
-    padding: 1rem;
-    cursor: pointer;
-    border: 2px solid black;
-}
-
 .loaderPageLevel {
     display: flex;
     justify-content: center;
@@ -22,19 +5,36 @@
     width: 100%;
     min-height: 100vh;
 }
-
-.firstAdminn {
+.firstOf {
     padding-left: 1rem;
     padding-right: 1rem;
 }
 
-.seconfAdminnn {
+.secondOf {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-top: 2rem;
+    max-width: 1280px;
+}
+
+.thirdOf {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+}
+
+.flowwww {
+    display: flow-root;
+}
+
+.fourthOf {
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
-.thirdAdminn {
+.fifthOf {
     display: flex;
     padding: 1.25rem;
     padding-top: 1.5rem;
@@ -47,7 +47,11 @@
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
 }
 
-.fourthAdminn {
+.diss {
+    display: flex;
+}
+
+.sixthOf {
     margin-bottom: 0.75rem;
     flex: 1 1 0%;
     font-size: 1.125rem;
@@ -55,20 +59,12 @@
     font-weight: 700;
 }
 
-.fifthAdminn {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-
-}
-
-.sixthAdminn {
+.seventhOf {
     display: flex;
     align-items: center;
-
 }
 
-.seventhAdminn {
+.eightOf {
     margin-right: 0.75rem;
     font-size: 0.875rem;
     line-height: 1.25rem;
@@ -76,23 +72,20 @@
     color: #111827;
 }
 
-.eighthAdminn {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
+.nineOf {
+    margin-right: 0.75rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
     font-weight: 600;
     color: #111827;
 }
 
-.ninthAdminn {
+.smalChngeOf {
     display: flex;
     gap: 0.5rem;
 }
 
-.lolAdminnnn {
-    flex-shrink: 0;
-}
-
-.tenthAdminn {
+.imagOFOFOF {
     object-fit: cover;
     border-radius: 0.5rem;
     width: 6rem;
@@ -100,12 +93,12 @@
     height: 6rem;
 }
 
-.againAdminnnn {
+.smlsmlml {
     display: flex;
     gap: 1.25rem;
 }
 
-.butonknAdminn {
+.buthonIgOF {
     display: inline-block;
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
@@ -124,14 +117,31 @@
 }
 
 @media (min-width: 640px) {
-    .firstAdminn {
+    .firstOf {
         padding-left: 1.5rem;
         padding-right: 1.5rem;
+    }
+
+    .secondOf {
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+    }
+
+    .thirdOf {
+        padding-left: 2rem;
+        padding-right: 2rem;
+        padding-top: 2.5rem;
+        padding-bottom: 2.5rem
     }
 }
 
 @media (min-width: 1024px) {
-    .firstAdminn {
+    .firstOf {
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+
+    .secondOf {
         padding-left: 2rem;
         padding-right: 2rem;
     }
