--- a/src/components/Navbars/Navbars.css
+++ b/src/components/Navbars/Navbars.css
@@ -42,6 +42,7 @@ header div,
 nav {
 	display: flex;
 	align-items: center;
+	z-index: 100000000000000000000000;
 }
 
 @media only screen and (max-width: 1024px) {
