--- a/src/app/register/Register.css
+++ b/src/app/register/Register.css
@@ -1,82 +1,184 @@
-.register{
-    height: 62vh;
-    /* margin: 20px 0; */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* background-color: #f1f1f1; */
+.register {
+  height: 62vh;
+  /* margin: 20px 0; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-color: #f1f1f1; */
 }
-.register .register_container{
-    margin: 20px 0;
-    padding: 30px 50px;
-    background-color: #f1f1f1;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-    display: flex;
-    border-radius: 5px;
-    align-items: center; 
-    flex-direction: column;
-    justify-content: center;
+
+.register .register_container {
+  margin: 20px 0;
+  padding: 30px 50px;
+  background-color: #f1f1f1;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  display: flex;
+  border-radius: 5px;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
-.register .register_container h1{
-    font-weight: 500;
-    font-size: 28px;
-    margin-bottom: 10px;
+
+.register .register_container h1 {
+  font-weight: 500;
+  font-size: 28px;
+  margin-bottom: 10px;
 }
-.register .register_container .input_container{
-    display: flex;
-    flex-direction: column;
-    /* gap: 10px; */
-    /* column-gap: 10px; */
+
+.register .register_container .input_container {
+  display: flex;
+  flex-direction: column;
+  /* gap: 10px; */
+  /* column-gap: 10px; */
 }
-.input_container label{
-    font-size: 20px; 
-    font-weight: 400; 
-    margin-bottom: 5px;
-    /* gap: 10px; */
+
+.input_container label {
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 5px;
+  /* gap: 10px; */
 }
-.input_container input{
-    width: 250px;
-    height: 35px;
-margin-bottom: 20px;
-border: none;
-outline: none;
-padding: 10px 10px;
-/* background-color: #f1f1f1; */
-font-size: 15px;
-font-weight: 400;
+
+.input_container input {
+  width: 250px;
+  height: 35px;
+  margin-bottom: 20px;
+  border: none;
+  outline: none;
+  padding: 10px 10px;
+  /* background-color: #f1f1f1; */
+  font-size: 15px;
+  font-weight: 400;
 }
-.register_container .register_btn{
-    display: flex;
-    align-items: center;
-    justify-content: center;    
-    flex-direction: column;
+
+.register_container .register_btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
-.register_container .register_btn button{
-    background-color: black;
-    display: flex;
-    align-content: center;
-    /* margin: auto; */
-    align-items: center;
-    cursor: pointer;
-    justify-content: center;
-    color: white;
-    font-weight: 400;
-    font-size: 18px;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 2px;
+
+.register_container .register_btn button {
+  background-color: black;
+  display: flex;
+  align-content: center;
+  /* margin: auto; */
+  align-items: center;
+  cursor: pointer;
+  justify-content: center;
+  color: white;
+  font-weight: 400;
+  font-size: 18px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 2px;
 }
+
 .register_container .register_btn button:disabled,
-.register_container .register_btn button[disabled]{
-  opacity: 0.5; 
+.register_container .register_btn button[disabled] {
+  opacity: 0.5;
   cursor: not-allowed;
 }
 
-.register_container .haveAcc{
-    margin-top: 10px;
+.register_container .haveAcc {
+  margin-top: 10px;
 }
-.link_register{
-    color: #111;
-    font-size: 18px; 
-    font-weight: 700;
+
+.link_register {
+  color: #111;
+  font-size: 18px;
+  font-weight: 700;
 }
+
+section {
+  padding: 100px 14%;
+}
+
+.homeSection {
+  min-height: 100vh;
+  width: 100%;
+  background: url("https://i.pinimg.com/564x/d4/b4/7b/d4b47b23e60c9b5fcd6d5d47744a9ec1.jpg");
+  /* background-color: #f1f1f1; */
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  align-items: center;
+}
+
+.home-text h1 {
+  font-size: 3.3rem;
+  font-weight: 800;
+  line-height: 1.2;
+  letter-spacing: 0.6rem;
+  margin-bottom: 1.4rem;
+  color: white;
+}
+
+.home-text span {
+  color: white;
+  font-size: 3.3rem;
+}
+
+.home-text p {
+  color: white;
+  font-size: 1rem;
+  font-weight: 500;
+  margin-bottom: 3rem;
+  letter-spacing: 0.2rem;
+}
+
+.home-btn {
+  display: inline-block;
+  padding: 13px 25px;
+  background-color: orange;
+  color: white;
+  font-size: 15px;
+  letter-spacing: 1px;
+  font-weight: 600;
+  border-radius: 5px;
+  transition: all .35s ease;
+}
+
+.home-btn:hover {
+  transform: translateY(-5px);
+  background-color: black;
+}
+
+.cta {
+  height: 60vh;
+  width: 100%;
+  background-color: #111;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+}
+
+.cta-text h6 {
+  font-size: 17px;
+  font-weight: 600;
+  letter-spacing: 0.6rem;
+  color: white;
+  margin-bottom: 14px;
+}
+
+.cta-text h4 {
+  font-size: 3.3rem;
+  letter-spacing: 0.6rem;
+  line-height: 1.2;
+  margin-bottom: 30px;
+  color: white;
+}
+
+@media (max-width:1000px) {
+  section {
+    padding: 80px 4%;
+    transition: 0.1s;
+  }
+}
+
+/* @media (max-width:670px){ */
+
+/* } */
